@@ -2,7 +2,7 @@
 __pycache__/*
 Backup/*
 blender_python_reference_2_71_0/*
-GradProjectXMLExport/*
+/GradProjectXMLExport/*
 *.zip
 *.blend
 *.blend1
