@@ -6,7 +6,14 @@
 			-Adds Python-level functionality to the project. [Partial]
 -------------------
 10-23-2014:
-		Updated CameraLogic.py [Uncommitted]
+		Updated CameraLogic.py [Committed]
 			-Added support for camera rotation via mouse movement.
-		Updated UserInput.py [Uncommitted]
+		Updated UserInput.py [Committed]
 			-Added support for Right-Mouse clicking to prompt user input via console.
+-------------------
+10-24-2014:
+		Added Cuboid.py
+			-Encapsulates information related to a given cuboid, such as the drawn object, and the given data.
+		Updated MainGameLogic.py
+			-Added method "indexDataTable" which indexes each item in the 4th dimension (TODO: Add support for 5+ dimensions)
+			-Added method "dataCubeFromDataTable" which takes a data table and an index to create a data cube
